--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -47,7 +47,6 @@
 
   @media (min-width: 660px) {
     justify-content: space-between;
-    padding: 0;
     min-height: 127px;
     padding: 0 0 20px 0;
     align-items: center;
@@ -63,7 +62,7 @@
   padding: 0;
 
   @media (min-width: 660px) {
-    margin: 3px 16px 0 0px;
+    margin: 3px 16px 0 0;
   }
 
   @media (min-width: 940px) {
